# workeeper

./: .dockerignore  .env.template  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  README_CN.md  docker-compose.yml  entrypoint.sh  pyproject.toml  test_collection_mapping.sh  test_simple.sh
design-demos/: chat-editorial-serif.html  chat-gallery-cool.html  collection-gallery-cool.html  note-editor-gallery-cool.html
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
src/: config.py  main.py  prompts.py  services.py
src/api/: schemas.py
src/collections/: __init__.py  store.py
src/db/: qdrant.py
src/hot_words/: models.py  routes.py  store.py
src/mcp/: lifespan.py  server.py
src/meeting/: __init__.py  models.py  routes.py  security.py  service.py  store.py  webm_fixer.py
src/models/: download.py
src/notes/: models.py  routes.py  service.py  store.py
src/parsers/: __init__.py  base.py  csv.py  docx.py  excel.py  html.py  json_parser.py  markdown.py  mineru_parser.py  pdf.py  pptx.py  text.py
src/providers/: base.py  (+3 more)
tests/: conftest.py  test_api.py  test_chunker.py  test_collection_id.py  test_config.py  test_consolidation.py  test_contextual.py  test_e2e_api.sh  test_info_routes.py  test_meeting.py  test_meeting_model.py  test_meeting_split.py  test_parent_child.py  test_parsers.py  test_provider_resolution.py  test_qdrant.py  test_recall.py  test_reranker.py  test_retriever.py  test_smoke.py  test_structured_summary.py  test_summary_manager.py  test_ui_automation.py
(+100 files in other folders)
