[project]
name = "workeeper"
version = "0.1.0"
description = "One-click deployable RAG Agent system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.13.0",
    "openai>=1.60.0",
    "cohere>=5.13.0",
    "mcp>=1.0.0",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.0",
    "markdown>=3.7",
    "chardet>=5.2.0",
    "beautifulsoup4>=4.12.0",
    "tiktoken>=0.8.0",
    "httpx>=0.28.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "regex>=2024.0.0",
    "dashscope>=1.20.0",
]

[project.optional-dependencies]
diarization = [
    "funasr>=1.1.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.9.0",
]

[project.scripts]
workeeper-mcp = "src.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"src/main.py" = ["E402"]
